2003-08-11  Theodore A. Roth  <troth@openavr.org>

	* include/string.h: Remove extra carriage returns.
	* include/avr/interrupt.h: Remove extra carriage returns.
	* include/avr/pgmspace.h: Remove extra carriage returns.
	* include/avr/sfr_defs.h: Remove extra carriage returns.
	* libc/misc/ee_wblk.S: Remove extra carriage returns.
	* libc/misc/ee_ww.S: Remove extra carriage returns.

2003-08-06  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* doc/api/inline_asm.dox: Fix broken link to ethernut site.

2003-07-21  Eric B. Weddington  <eric@ecentral.com>

	* include/avr/boot.h: Make common bit definitions to handle the mega323.

2003-07-17  Eric B. Weddington  <eric@ecentral.com>

	New functions eeprom_write_word and eeprom_write_block from
	Artur Lipowski <LAL@pro.onet.pl>
	* libc/misc/eeprom.S: New functions, add const to parameters of read
	functions.
	* libc/misc/eeprom_ww.S: New file.
	* libc/misc/eeprom_wblk.S: New file.
	* include/avr/eeprom.h: New functions.
	* libc/misc/Makefile.am: Add new modules.
	* NEWS: Note about new functions.
	
2003-07-10  Eric B. Weddington  <eric@ecentral.com>

	* include/avr/boot.h: Fix doxygen.

2003-06-20  Eric B. Weddington  <eric@ecentral.com>

	* include/string.h: Add declarations of new functions from Reiner.
	* include/avr/pgmspace.h: ditto.

2003-06-20  Eric B. Weddington  <eric@ecentral.com>

	* libc/misc/itoa.S: Fix for bug #4010 from Reiner Patommel.
	* libc/misc/ltoa.S: ditto
	* libc/misc/ultoa.S: ditto
	* libc/misc/utoa.S: ditto
	* include/stdlib.h: Update doxygen for these functions.

2003-06-20  Eric B. Weddington  <eric@ecentral.com>

	* libc/stdlib/atoi.S: Fix bug with extra text.

2003-06-19  Eric B. Weddington  <eric@ecentral.com>

	New string functions from Reiner Patommel.
	* libc/string/strlcat.S: Add file.
	* libc/string/strlcpy.S: Add file.
	* libc/string/strsep.S: Add file.
	* libc/string/strtok_r.S: Add file.
	* libc/string/Makefile.am: Modify for new functions.